--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "redux": "^4.0.5"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.1"
+    "babel-preset-expo": "^5.1.1",
+    "redux-devtools-extension": "^2.13.8"
   },
   "private": true
 }
